
	* libavogadro/src/engines/surfaceengine.cpp: Scale numBoxes with
	quality.

	* libavogadro/src/engines/surfaceengine.cpp: Instead of iterating over
	all atoms for each grid point, iterate over all atoms once and only
	update grid points around the atom. This is 100-200x times faster...

2008-06-04  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/ribbonengine.cpp: Fixed issue with atom IDs
	not getting trimmed and the ribbon not being displayed.

	* libavogadro/src/engines/orbitalengine.*: Actually draw the extents of
	the cube if requested to.

	* libavogadro/src/engines/surfaceengine.*: Added a quick render and
	render transparent function.

	* libavogadro/src/engines/sphereengine.*: Added a quick render
	function to fix rendering when quick draw is used.

	* avogadro/src/addenginedialog.cpp: Fixes bug 1984080 - the added
	engine was somewhat random before.

2008-06-03  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* i18n/*, scripts/extract-messages.sh: Added additional resources
	for .pot and .po file generation to integrate with
	Rosetta/Launchpad. Includes pt and es initial translations.

	* avogadro/src/CMakeLists.txt: Use a file glob for ts files to
	build into qm files.

2008-06-03  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engine.h, libavogadro/src/extension.h,
	libavogadro/src/tool.h: Bumped our plugin version to 1.1 - should help
	with bugs 1973909 and 1982102 - warning a make clean is needed.

2008-06-02  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* libavogadro/src/engines/dipoleengine.*: New dipole moment engine
	-- needs more work, but displays dipole moments from Gaussian,
	GAMESS and Q-Chem output  with recent OB-trunk.

2008-06-02  Marcus D. Hanwell  <marcus@cryos.org>

	* libavogadro/src/engines/orbitalengine.cpp: Fixed bug 1968565 -
	orbitals are now cleared correctly along with everything else.

2008-05-30  Marcus D. Hanwell  <marcus@cryos.org>
